RbA Build/src/objects/Contact_History__c.object
<CustomObject>
    <description>Junction object between Account and Contacts.</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Associated_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dwelling__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>What Dwelling is this Contact associated with?</inlineHelpText>
        <label>Dwelling</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Associated_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Tracks the type of association the contact has with the account/dwelling</description>
        <inlineHelpText>Tracks the type of association the contact has with the account/dwelling</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Current Resident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Resident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Renter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Renter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Contact History</label>
    <nameField>
        <displayFormat>CH-{00}</displayFormat>
        <label>CH#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>